[package]
name = "ctlrust"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
openssl = "0.10.64"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
futures = "0.3.30"
reqwest = "0.12.4"
# serde = { version = "1.0.202", features = ["derive"] }
# serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
regex = "1.10.4"
clap = { version = "4.5.4", features = ["derive"] }

